# adk-crash-course

./: pyproject.toml  requirements.txt
01_basic_agent/greeting_agent/: agent.py
02_tool_agent/: README.md
02_tool_agent/tool_agent/: agent.py
03_litellm_agent/dad_joke_agent/: agent.py
04_structured_output_agent/email_agent/: agent.py
05_sessions_state_runners/: main.py
05_sessions_state_runners/qa_agent/: agent.py
06_persistent_memory/: main.py  utils.py
06_persistent_memory/reminder_agent/: agent.py  tools.py
07_multi_agent/: README.md
07_multi_agent/manager/: agent.py
07_multi_agent/manager/sub_agents/funny_nerd/: agent.py
07_multi_agent/manager/sub_agents/news_analyst/: agent.py
07_multi_agent/manager/sub_agents/stock_analyst/: agent.py
07_multi_agent/manager/tools/: index.py
08_stateful_multi_agent/: README.md  main.py  utils.py
08_stateful_multi_agent/customer_service_agent/: agent.py
08_stateful_multi_agent/customer_service_agent/sub_agents/order_agent/: agent.py
08_stateful_multi_agent/customer_service_agent/sub_agents/sales_agent/: agent.py
